tests/invalid/annotation_forward_ref_multi_expr/main.py
def main() -> None:
    x: "int; int" = 1
